--- a/.github/workflows/DeplotToAzure.yml
+++ b/.github/workflows/DeplotToAzure.yml
@@ -26,5 +26,5 @@ jobs:
       uses: azure/webapps-deploy@v1
       with:
         app-name: GameOfEgos
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        publish-profile: GAMEOFEGOS
+        package: ./dist/GameOfEgos
