--- a/.github/workflows/DeplotToAzure.yml
+++ b/.github/workflows/DeplotToAzure.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 env:
-  AZURE_WEBAPP_NAME: github-actions-spa
+  AZURE_WEBAPP_NAME: GameOfEgos
   AZURE_WEBAPP_PACKAGE_PATH: './dist/angulargithubaction'
   NODE_VERSION: '10.x'
 
