--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "GameOfEgos/dist/GameOfEgos",
+            "outputPath": "dist/GameOfEgos",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,7 +69,7 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "GameOfEgos:build",
-            "port": 8080
+            "port": 4200
           },
           "configurations": {
             "production": {
