--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -14,8 +14,7 @@ jobs:
           node-version: '12.x'
       - name: Install dependencies
         run: npm install
-      - run: ng build --prod
-      - run: ng build --prod
+      - run: npm run buildGIT
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
